# co2-meter-using-ESP32

./: .gitignore  CMakeLists.txt  README.md  descricao.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  co2_sensor_task.c  co2_sensor_task.h  http_server.c  http_server.h  main.c  rtc.c  rtc.h  sd_card.c  sd_card.h
